feat(s): 更改browserHistory成hashHistory，前置需要服务端渲染，更麻烦

--- a/src/client/style/base.css
+++ b/src/client/style/base.css
@@ -75,6 +75,7 @@ pre {
 
 a {
   background-color: transparent;
+  text-decoration-line: none;
 }
 
 /**
@@ -347,3 +348,7 @@ template {
 [hidden] {
   display: none;
 }
+
+
+/** beyond icon css */
+
