feat(s): Icon加入svgr，还没解决module编译报错问题

--- a/src/client/style/base.css
+++ b/src/client/style/base.css
@@ -349,6 +349,11 @@ template {
   display: none;
 }
 
+ul, li, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 /** beyond icon css */
 
