--- a/src/client/style/style.css
+++ b/src/client/style/style.css
@@ -1,6 +1,7 @@
 body {
   min-height: 800px;
-  background-image: url('../static/stock-photo-288388299.jpg');
+  /* background-image: url('../static/stock-photo-288388299.jpg'); */
+  background-image: url('../static/ORG_DSC01011.JPG');
   background-size: cover;
   background-color: cornflowerblue;
 }
